...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <EditText
            android:id="@+id/username_input"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:hint="Username"
            android:background="#fff" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/username_input"
            android:layout_toRightOf="@+id/username_input"
            android:background="?attr/colorPrimary"
            android:padding="10dp"
...




    <!-- Chat Messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/username"
        android:layout_above="@+id/sendMessage"
        android:padding="10dp" />

...
