...
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>


    <EditText
        android:id="@+id/etReportBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="Describe the issue..."
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLength="2000"
        android:scrollbars="vertical" />


    <Button
        android:id="@+id/btnSendReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Send Report"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@android:color/white" />
...
