...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Points: "
        android:paddingTop="10dp"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />
...
        android:layout_height="wrap_content"
        android:layout_below="@+id/Points"
        android:padding="1dp"
        >

        <!-- Row labels -->
        <TextView android:text="Col 1" android:gravity="center" android:layout_column="1" android:layout_row="0" android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/col1"/>
        <TextView android:text="Col 2" android:gravity="center" android:layout_column="2" android:layout_row="0" android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/col2"/>
        <TextView android:text="Col 3" android:gravity="center" android:layout_column="3" android:layout_row="0" android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/col3"/>

        <!-- Column labels -->
        <TextView android:text="Row 1" android:layout_gravity="top"
            android:gravity="center_horizontal" android:layout_column="0" android:layout_row="1" android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/row1"/>

        <EditText android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="R1C1"
            android:id="@+id/r1c1"
            android:tag="1,1"
            android:background="@drawable/border_cell_topleft"
            android:scrollHorizontally="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R1C2" android:id="@+id/r1c2" android:tag="1,2" android:background="@drawable/border_cell_middle_topbottom"
            android:scrollHorizontally="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R1C3" android:id="@+id/r1c3" android:tag="1,3" android:background="@drawable/border_cell_topright"
            android:scrollHorizontally="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"/>

        <TextView android:text="Row 2" android:layout_column="0" android:layout_row="2" android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/row2" android:layout_gravity="top"
            android:gravity="center_horizontal"/>
        <EditText android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="R2C1"
            android:id="@+id/r2c1"
            android:tag="2,1"
            android:background="@drawable/border_cell_middle_leftright"
            android:scrollHorizontally="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R2C2" android:id="@+id/r2c2" android:tag="2,2" android:background="@drawable/border_cell_middle_topbottom"
            android:scrollHorizontally="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R2C3" android:id="@+id/r2c3" android:tag="2,3" android:background="@drawable/border_cell_middle_leftright"
            android:scrollHorizontally="true"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"/>

        <TextView
            android:id="@+id/row3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text="Row 3" />

        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R3C1" android:id="@+id/r3c1" android:tag="3,1" android:background="@drawable/border_cell_bottomleft"/>
        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R3C2" android:id="@+id/r3c2" android:tag="3,2" android:background="@drawable/border_cell_middle_topbottom"/>
        <EditText android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R3C3" android:id="@+id/r3c3" android:tag="3,3" android:background="@drawable/border_cell_bottomright"/>

        <TextView
            android:id="@+id/timertitle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="4"
            android:layout_gravity="bottom|center"
            android:textAlignment="center"
            android:text="Time:"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/timer"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:layout_gravity="top|center"
            android:textAlignment="center"
...

    <Button
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="Quit"
        android:id="@+id/endGameButton"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>


...
